--- a/customer.html
+++ b/customer.html
@@ -37,12 +37,14 @@
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
-            <img
-              src="images/logo - Nusanse.svg"
-              alt=""
-              height="32px"
-              width="155px"
-            />
+            <a href="index.html">
+              <img
+                src="images/logo - Nusanse.svg"
+                alt=""
+                height="32px"
+                width="155px"
+              />
+            </a>
           </div>
 
           <div class="hamburger-menu">
@@ -99,6 +101,9 @@
                       <p class="small-p">Software Integration</p>
                       <br />
                       <p class="small-p">Sales Funnel and Pipelines</p>
+                      <br>
+                      <a href="services.html"><p>Web Development</p></a>
+
                     </li>
                   </ul>
                 </div>
@@ -129,33 +134,79 @@
     <!-- card section  -->
     <div class="containerWrp">
       <div class="card">
-        <div>
-          <img src="images/cs-img.png" alt="" />
+        <div class="review">
+          <h5>Sarah</h5>
+          <p>Marketing Consultant</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance has been instrumental in boosting our digital presence. Their expertise in digital marketing and smooth communication made our collaboration seamless.</p>
         </div>
-        <div>
-          <img src="images/cs-img.png" alt="" />
-        </div>
-      </div>
-      <div class="card">
-        <div>
-          <img src="images/cs-img.png" alt="" />
-        </div>
-        <div>
-          <img src="images/cs-img.png" alt="" />
+        <div class="review">
+          <h5>Michael</h5>
+          <p>Small Business Owner</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Choosing Nusance was a wise decision for our online strategy. They delivered results swiftly and kept us informed every step of the way.</p>
         </div>
       </div>
       <div class="card">
-        <div>
-          <img src="images/cs-img.png" alt="" />
+        <div class="review">
+          <h5>Emily</h5>
+          <p>Entrepreneur</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Impressed with Nusance's innovative solutions and proactive approach. They helped scale my startup effectively.</p>
         </div>
-        <div>
-          <img src="images/cs-img.png" alt="" />
+        <div class="review">
+          <h5>David</h5>
+          <p>E-commerce Manager</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance optimized our e-commerce platform remarkably well. Their clear communication and technical prowess are commendable.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="review">
+          <h5>Jessica</h5>
+          <p>Freelance Designer</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Working with Nusance was a breeze. They understood my design needs and translated them into a user-friendly website.</p>
+        </div>
+        <div class="review">
+          <h5>Andrew</h5>
+          <p>Real Estate Agent</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance revolutionized our digital marketing strategy. Their prompt communication and strategic insights were invaluable.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="review">
+          <h5>Olivia</h5>
+          <p>Startup Founder</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance played a crucial role in our startup's growth. Their commitment to results and effective communication set them apart.</p>
+        </div>
+        <div class="review">
+          <h5>Ryan</h5>
+          <p>Digital Marketer</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance's expertise in digital marketing is top-notch. They provided clear communication and delivered impressive results.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="review">
+          <h5>Sophia</h5>
+          <p>Event Planner</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>Nusance's attention to detail and proactive communication made our event marketing a success.</p>
+        </div>
+        <div class="review">
+          <h5>Daniel</h5>
+          <p>Consultant</p>
+          <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star" style="color: rgba(230, 230, 230, 1);"></i> 
+          <p>I rely on Nusance for their strategic advice and effective communication. They're a trusted partner in my consulting projects.</p>
         </div>
       </div>
     </div>
 
     <!-- video section  -->
-    <div class="containerWrp">
+    <!-- <div class="containerWrp">
       <div id="vdo">
         <h3><span>Video </span>Testimonials</h3>
 
@@ -176,7 +227,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- contact section starts -->
 
@@ -215,15 +266,19 @@
               </div>
               <p>From brand creation to revenue generation.</p>
               <div class="social">
-                <div><i class="fa-brands fa-instagram"></i></div>
+                <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
+                  <div><i class="fa-brands fa-instagram"></i></div>
+                </a>
                 <div><i class="fa-brands fa-twitter"></i></div>
-                <div><i class="fa-brands fa-linkedin-in"></i></div>
+                <a href="https://www.linkedin.com/company/nusanseio">
+                  <div><i class="fa-brands fa-linkedin-in"></i></div>
+                </a>
               </div>
             </div>
 
             <div id="m">
               <h4 id="foot-h">Why Us?</h4>
-              <p id="foot-p">Why Our Company</p>
+              <!-- <p id="foot-p">Why Our Company</p> -->
               <a href="obm.html">
                 <p id="foot-p">Our Company vs <br />Online Business Manager</p>
               </a>
@@ -247,7 +302,7 @@
       </div>
 
       <div class="copyright">
-        <p>2024 © My Company. All Rights Reserved.</p>
+        <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
