--- a/index.html
+++ b/index.html
@@ -891,10 +891,38 @@
 
         const hamburgerMenu = $(".hamburger-menu");
         const nav = $(".nav");
+        const body = $("body");
 
-        hamburgerMenu.click(function () {
+
+        // hamburgerMenu.click(function () {
+        //   if (!nav.hasClass("show")) {
+        //     //  slide from right animation with jquery
+        //     nav.addClass("show");
+        //     nav.animate(
+        //       {
+        //         right: "0",
+        //         ease: "ease-in",
+        //       },
+        //       300
+        //     );
+        //   } else {
+        //     nav.animate(
+        //       {
+        //         right: "-100%",
+        //         ease: "ease-out",
+        //       },
+        //       300,
+        //       function () {
+        //         nav.removeClass("show");
+        //       }
+        //     );
+        //   }
+        // });
+
+    // NEW ---------------------------------------------
+        // Function to open the menu
+        function openMenu() {
           if (!nav.hasClass("show")) {
-            //  slide from right animation with jquery
             nav.addClass("show");
             nav.animate(
               {
@@ -903,21 +931,48 @@
               },
               300
             );
-          } else {
-            nav.animate(
-              {
-                right: "-100%",
-                ease: "ease-out",
-              },
-              300,
-              function () {
-                nav.removeClass("show");
-              }
-            );
           }
+        }
+
+        // Function to close the menu
+        function closeMenu() {
+          nav.animate(
+            {
+              right: "-100%",
+              ease: "ease-out",
+            },
+            300,
+            function () {
+              nav.removeClass("show");
+            }
+          );
+        }
+
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+          event.stopPropagation(); // Prevent click from propagating to the document
+          if (!nav.hasClass("show")) {
+            openMenu();
+          } else {
+            closeMenu();
+          }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+          if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+          }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+          event.stopPropagation();
         });
       });
     </script>
+
+
     <script>
       document.querySelectorAll(".question").forEach((item) => {
         item.addEventListener("click", function () {
