--- a/obm.html
+++ b/obm.html
@@ -357,18 +357,9 @@
       const hamburgerMenu = $(".hamburger-menu");
       const nav = $(".nav");
 
-      hamburgerMenu.click(function () {
-        if (!nav.hasClass("show")) {
-          //  slide from right animation with jquery
-          nav.addClass("show");
-          nav.animate(
-            {
-              right: "0",
-              ease: "ease-in",
-            },
-            300
-          );
-        } else {
+      const body = $("body");
+        // Function to close the menu
+        function closeMenu() {
           nav.animate(
             {
               right: "-100%",
@@ -380,7 +371,28 @@
             }
           );
         }
-      });
+
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+          event.stopPropagation(); // Prevent click from propagating to the document
+          if (!nav.hasClass("show")) {
+            openMenu();
+          } else {
+            closeMenu();
+          }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+          if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+          }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+          event.stopPropagation();
+        });
 
       document.querySelectorAll(".question").forEach((item) => {
         item.addEventListener("click", function () {
