--- a/p_inner.html
+++ b/p_inner.html
@@ -35,7 +35,6 @@
   </head>
   <body>
     <!-- navbar  -->
-    <div>
       <div class="containerWrp">
         <div class="navbar">
           <div class="logo">
@@ -117,7 +116,6 @@
           <a href="#"><div class="cta">Book a Call</div></a>
         </div>
       </div>
-    </div>
     <!-- hero section  -->
 
     <!-- heading section  -->
@@ -234,20 +232,21 @@
 
     <!-- you may like -->
     <div class="containerWrp">
-      <h3 style="text-align: center; margin-top: 5.5rem">You may also like</h3>
-
-      <div data-aos="fade-up" data-aos-delay="200" class="card testimonialSlider">
-        <div class="slideInner">
-          <div><a href="p_inner2.html"><img src="images/port-2.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner5.html"><img src="images/port-5.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner6.html"><img src="images/port-6.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner.html"><img src="images/port-1.png" alt=""></a></div>
+      <div class="like">
+        <h3 style="text-align: center; margin-top: 5.5rem">You may also like</h3>
+        <div data-aos="fade-up" data-aos-delay="200" class="card testimonialSlider">
+          <div class="slideInner">
+            <div><a href="p_inner2.html"><img src="images/port-2.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner5.html"><img src="images/port-5.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner6.html"><img src="images/port-6.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner.html"><img src="images/port-1.png" alt=""></a></div>
+          </div>
         </div>
       </div>
     </div>
@@ -338,18 +337,9 @@
       const hamburgerMenu = $(".hamburger-menu");
       const nav = $(".nav");
 
-      hamburgerMenu.click(function () {
-        if (!nav.hasClass("show")) {
-          //  slide from right animation with jquery
-          nav.addClass("show");
-          nav.animate(
-            {
-              right: "0",
-              ease: "ease-in",
-            },
-            300
-          );
-        } else {
+      const body = $("body");
+        // Function to close the menu
+        function closeMenu() {
           nav.animate(
             {
               right: "-100%",
@@ -361,7 +351,28 @@
             }
           );
         }
-      });
+
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+          event.stopPropagation(); // Prevent click from propagating to the document
+          if (!nav.hasClass("show")) {
+            openMenu();
+          } else {
+            closeMenu();
+          }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+          if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+          }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+          event.stopPropagation();
+        });
 
       document.querySelectorAll(".question").forEach((item) => {
         item.addEventListener("click", function () {
