--- a/p_inner3.html
+++ b/p_inner3.html
@@ -233,20 +233,21 @@ We digitized and optimized the company's business processes by providing user-fr
 
     <!-- you may like -->
     <div class="containerWrp">
-      <h3 style="text-align: center; margin-top: 5.5rem">You may also like</h3>
-
-      <div data-aos="fade-up" data-aos-delay="200" class="card testimonialSlider">
-        <div class="slideInner">
-          <div><a href="p_inner2.html"><img src="images/port-2.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner5.html"><img src="images/port-5.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner6.html"><img src="images/port-6.png" alt=""></a></div>
-        </div>
-        <div class="slideInner">
-          <div><a href="p_inner.html"><img src="images/port-1.png" alt=""></a></div>
+      <div class="like">
+        <h3 style="text-align: center; margin-top: 5.5rem">You may also like</h3>
+        <div data-aos="fade-up" data-aos-delay="200" class="card testimonialSlider">
+          <div class="slideInner">
+            <div><a href="p_inner2.html"><img src="images/port-2.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner5.html"><img src="images/port-5.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner6.html"><img src="images/port-6.png" alt=""></a></div>
+          </div>
+          <div class="slideInner">
+            <div><a href="p_inner.html"><img src="images/port-1.png" alt=""></a></div>
+          </div>
         </div>
       </div>
     </div>
@@ -337,18 +338,9 @@ We digitized and optimized the company's business processes by providing user-fr
       const hamburgerMenu = $(".hamburger-menu");
       const nav = $(".nav");
 
-      hamburgerMenu.click(function () {
-        if (!nav.hasClass("show")) {
-          //  slide from right animation with jquery
-          nav.addClass("show");
-          nav.animate(
-            {
-              right: "0",
-              ease: "ease-in",
-            },
-            300
-          );
-        } else {
+      const body = $("body");
+        // Function to close the menu
+        function closeMenu() {
           nav.animate(
             {
               right: "-100%",
@@ -360,7 +352,28 @@ We digitized and optimized the company's business processes by providing user-fr
             }
           );
         }
-      });
+
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+          event.stopPropagation(); // Prevent click from propagating to the document
+          if (!nav.hasClass("show")) {
+            openMenu();
+          } else {
+            closeMenu();
+          }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+          if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+          }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+          event.stopPropagation();
+        });
 
       document.querySelectorAll(".question").forEach((item) => {
         item.addEventListener("click", function () {
