--- a/obm.html
+++ b/obm.html
@@ -315,7 +315,7 @@
                 <a href="https://www.instagram.com/_nusanse?igsh=cms1a2xqODdiM2Zm">
                   <div><i class="fa-brands fa-instagram"></i></div>
                 </a>
-                <div><i class="fa-brands fa-twitter"></i></div>
+                <!-- <div><i class="fa-brands fa-twitter"></i></div> -->
                 <a href="https://www.linkedin.com/company/nusanseio">
                   <div><i class="fa-brands fa-linkedin-in"></i></div>
                 </a>
