--- a/category.html
+++ b/category.html
@@ -52,6 +52,7 @@
           </div>
 
           <div class="nav">
+            <div class="cross"><i class="fa-solid fa-x"></i></div>
             <a
               href="index.html"
              
@@ -378,63 +379,129 @@
         <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
-  </body>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  
   <script>
-    const hamburgerMenu = $(".hamburger-menu");
-    const nav = $(".nav");
-
-    const body = $("body");
-    // Function to close the menu
-    function closeMenu() {
-      nav.animate(
-        {
-          right: "-100%",
-          ease: "ease-out",
-        },
-        300,
-        function () {
-          nav.removeClass("show");
+    $(document).ready(function () {
+      $(".testimonialSlider").slick({
+        dots: true,
+        infinite: true,
+        speed: 300,
+        slidesToShow: 4,
+        adaptiveHeight: true,
+        autoplay: true,
+        autoplaySpeed: 1000,
+        responsive: [
+          {
+            breakpoint: 1024,
+            settings: {
+              slidesToShow: 3,
+              slidesToScroll: 3,
+              infinite: true,
+              dots: true,
+            },
+          },
+          {
+            breakpoint: 600,
+            settings: {
+              slidesToShow: 2,
+              slidesToScroll: 2,
+            },
+          },
+        ],
+      });
+  
+      const hamburgerMenu = $(".hamburger-menu");
+      const nav = $(".nav");
+  
+      // Function to open the menu
+      function openMenu() {
+        if (!nav.hasClass("show")) {
+          nav.addClass("show");
+          nav.animate(
+            {
+              right: "0",
+            },
+            {
+              duration: 300,
+              easing: "swing", // Adjust as needed
+            }
+          );
         }
-      );
-    }
-
-    // Toggle menu on hamburger click
-    hamburgerMenu.click(function (event) {
-      event.stopPropagation(); // Prevent click from propagating to the document
-      if (!nav.hasClass("show")) {
-        openMenu();
-      } else {
-        closeMenu();
       }
-    });
-
-    // Close menu if clicked outside of the nav
-    $(document).click(function (event) {
-      if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
-        closeMenu();
+  
+      // Function to close the menu
+      function closeMenu() {
+        nav.animate(
+          {
+            right: "-100%",
+          },
+          {
+            duration: 300,
+            easing: "swing", // Adjust as needed
+            complete: function () {
+              nav.removeClass("show");
+            },
+          }
+        );
       }
-    });
-
-    // Prevent click event from closing the menu when clicking inside the nav
-    nav.click(function (event) {
-      event.stopPropagation();
-    });
-    document.querySelectorAll(".question").forEach((item) => {
-      item.addEventListener("click", function () {
-        // Toggle the 'active' class on the clicked question
-        this.classList.toggle("active");
-
-        // Toggle the visibility of the answer associated with the clicked question
-        var answer = this.nextElementSibling;
-        if (answer.style.display === "block") {
-          answer.style.display = "none";
+  
+      // Toggle menu on hamburger click
+      hamburgerMenu.click(function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
+        if (!nav.hasClass("show")) {
+          openMenu();
         } else {
-          answer.style.display = "block";
+          closeMenu();
         }
-        answer.classList.toggle("show"); // Toggle 'show' class instead of directly changing 'display'
+      });
+  
+      // Close menu if clicked outside of the nav
+      $(document).click(function (event) {
+        if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+          closeMenu();
+        }
+      });
+  
+      // Prevent click event from closing the menu when clicking inside the nav
+      nav.click(function (event) {
+        event.stopPropagation();
       });
     });
   </script>
+  
+  <script>
+    document.querySelectorAll(".question").forEach((item) => {
+      item.addEventListener("click", function () {
+        this.classList.toggle("active");
+        const answer = this.nextElementSibling;
+        answer.style.display = answer.style.display === "block" ? "none" : "block";
+        answer.classList.toggle("show");
+      });
+    });
+  </script>
+  
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const nav = document.querySelector('.nav');
+      const cross = document.querySelector('.cross');
+  
+      // Function to close the menu
+      function closeMenu() {
+        nav.style.right = '-100%';
+        nav.classList.remove('show');
+      }
+  
+      // Add click event listener to the cross button
+      cross.addEventListener('click', function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
+        closeMenu();
+      });
+    });
+  </script>
+    
+  </body>
+  
 </html>
