--- a/obm.html
+++ b/obm.html
@@ -52,6 +52,7 @@
           </div>
 
           <div class="nav">
+            <div class="cross"><i class="fa-solid fa-x"></i></div>
             <a
               href="index.html">Home
             </a>
@@ -428,5 +429,24 @@
     });
     
   </script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const nav = document.querySelector('.nav');
+      const cross = document.querySelector('.cross');
+  
+      // Function to close the menu
+      function closeMenu() {
+        nav.style.right = '-100%';
+        nav.classList.remove('show');
+      }
+  
+      // Add click event listener to the cross button
+      cross.addEventListener('click', function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
+        closeMenu();
+      });
+    });
+  </script>
+  
   </body>
 </html>
